--- a/.github/workflows/frontend_ci-cd.yml
+++ b/.github/workflows/frontend_ci-cd.yml
@@ -20,22 +20,30 @@ jobs:
       - run: npm run generate
       - name: Verify output
         run: test -d .output/public || (echo "Not found > .output/public" && exit 1)
-        
+      - name: Upload production build
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-build
+          path: .output/public
+          retention-days: 1
+          
   deploy:
     runs-on: ubuntu-latest
     needs: ci
+    environment: main-aws
     steps:
+      - name: Download production build
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-build
+          path: .output/public
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
-
       - name: Upload to S3
-        run: aws s3 sync ./.output/public s3://${{ secrets.S3_BUCKET }} --delete
-
+        run: aws s3 sync .output/public s3://${{ secrets.S3_BUCKET }} --delete
       - name: Invalidate CloudFront cache
-        run: aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/*"
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
