--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "3.3.2",
+    "@nuxtjs/seo": "^3.1.0",
     "eslint": "^9.0.0",
     "nuxt": "^4.0.3",
     "typescript": "^5.9.2",
