--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "3.3.2",
     "@nuxtjs/seo": "^3.1.0",
+    "@pinia/nuxt": "^0.11.2",
     "eslint": "^9.0.0",
     "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
