--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.6.3",
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "3.3.2",
     "@nuxtjs/seo": "^3.1.0",
     "@pinia/nuxt": "^0.11.2",
+    "better-sqlite3": "^12.2.0",
     "eslint": "^9.0.0",
     "nuxt": "^4.0.3",
     "pinia": "^3.0.3",
