--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "better-sqlite3": "^12.2.0",
     "eslint": "^9.0.0",
     "nuxt": "^4.0.3",
+    "nuxt-graphql-client": "0.2.46",
     "pinia": "^3.0.3",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
