--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ name: CI/CD Frontend
 on:
   pull_request:
     branches: [ main ]
-  push:
-    branches: [ main ]
 
 jobs:
   ci:
@@ -15,6 +13,10 @@ jobs:
         with:
           node-version: 20
           cache: npm
+      - name: Validate package-lock.json
+        run: |
+          npm install --package-lock-only
+          git diff --exit-code package-lock.json
       - run: npm ci
       - run: npm run lint --if-present
       - run: npm run generate
