chore: update workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: CI/CD Frontend
 on:
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
   push:
     branches: [ main ]
 
@@ -31,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: ci
     environment: main-aws
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Download production build
         uses: actions/download-artifact@v4
