--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+    environment: main-aws
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -18,7 +19,11 @@ jobs:
           cache: yarn
       - run: yarn install --frozen-lockfile
       - run: yarn lint
-      - run: yarn generate
+      - name: Build file
+        run: yarn generate 
+        env: 
+          NUXT_BACKEND: ${{ secrets.NUXT_BACKEND }}
+      
       - name: Verify output
         run: test -d .output/public || (echo "Not found > .output/public" && exit 1)
       - name: Upload production build
