--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
     "@nuxt/test-utils": "3.19.2",
+    "@pinia/testing": "1.0.2",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/vue": "8.1.0",
     "@vue/test-utils": "2.4.6",
+    "graphql": "16.11.0",
     "happy-dom": "20.0.0",
     "playwright-core": "1.56.0",
     "prettier": "^3.6.2",
