--- a/.github/workflows/run-terraform.yml
+++ b/.github/workflows/run-terraform.yml
@@ -21,11 +21,11 @@ on:
 
 jobs:
   trigger-terraform:
-    runs-on: ubuntu-latest 
-    environment: aws-terraform
     uses: Letterbox-discovery-recommendations/terraform/.github/workflows/terraform-deploy.yml@main
     with:
       environment: ${{ inputs.environment || 'dev' }}
       action: ${{ inputs.action || 'plan' }}
-      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: 'us-east-2'
