--- a/.github/workflows/run-terraform.yml
+++ b/.github/workflows/run-terraform.yml
@@ -25,7 +25,7 @@ jobs:
     with:
       environment: ${{ inputs.environment || 'dev' }}
       action: ${{ inputs.action || 'plan' }}
+      aws_region: us-east-2
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'us-east-2'
