--- a/.github/workflows/run-terraform.yml
+++ b/.github/workflows/run-terraform.yml
@@ -7,6 +7,7 @@ on:
         description: 'Environment to deploy'
         required: true
         type: choice
+        default: dev
         options: [dev, prod]
       action:
         description: 'Terraform action'
@@ -17,14 +18,21 @@ on:
   push:
     branches:
       - terraform-implementation
+      - dev
+      - terraform-deploy
 
 jobs:
   trigger-terraform:
     uses: Letterbox-discovery-recommendations/terraform/.github/workflows/terraform-deploy.yml@main
     with:
-      environment: ${{ inputs.environment || 'dev' }}
-      action: ${{ inputs.action || 'plan' }}
+      environment: ${{ inputs.environment }}
+      action: ${{ 
+        (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/terraform-deploy') 
+        && 'apply' 
+        || (inputs.action || 'plan') 
+        }}
       aws_region: us-east-2
+
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
