--- a/.github/workflows/run-terraform.yml
+++ b/.github/workflows/run-terraform.yml
@@ -7,7 +7,7 @@ on:
         description: 'Environment to deploy'
         required: true
         type: choice
-        default: dev
+        default: 'dev'
         options: [dev, prod]
       action:
         description: 'Terraform action'
