--- a/.github/workflows/run-terraform.yml
+++ b/.github/workflows/run-terraform.yml
@@ -25,7 +25,7 @@ jobs:
   trigger-terraform:
     uses: Letterbox-discovery-recommendations/terraform/.github/workflows/terraform-deploy.yml@main
     with:
-      environment: ${{ inputs.environment }}
+      environment: ${{ inputs.environment || 'dev' }}
       action: ${{ 
         (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/terraform-deploy') 
         && 'apply' 
