--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui" 
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
@@ -15,6 +18,8 @@
     "@nuxt/ui": "3.3.2",
     "@nuxtjs/seo": "3.1.0",
     "@pinia/nuxt": "0.11.2",
+    "@vue/compiler-ssr": "3.4.27",
+    "@vue/server-renderer": "3.4.27",
     "better-sqlite3": "12.2.0",
     "eslint": "9.0.0",
     "nuxt": "4.0.3",
@@ -22,13 +27,20 @@
     "pinia": "3.0.3",
     "typescript": "5.9.2",
     "vue": "3.5.20",
-    "vue-router": "4.5.1",
-    "@vue/server-renderer": "3.4.27",
-    "@vue/compiler-ssr": "3.4.27"
+    "vue-router": "4.5.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
+    "@nuxt/test-utils": "3.19.2",
+    "@pinia/testing": "1.0.2",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/vue": "8.1.0",
+    "@vue/test-utils": "2.4.6",
+    "graphql": "16.11.0",
+    "happy-dom": "20.0.0",
+    "playwright-core": "1.56.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14"
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "vitest": "3.2.4"
   }
 }
