--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -72,20 +72,46 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p REPORTES
-          yarn test:run --coverage || true
+          yarn test:run > REPORTES/test_output.txt 2>&1 || true
 
       - name: Generate HTML report from Vitest
         continue-on-error: true
         run: |
           set -euo pipefail
-          # Vitest generará reportes en coverage/
-          # Copiamos a REPORTES si existen
-          if [ -d coverage ]; then
-            cp -r coverage REPORTES/coverage_html || true
-            if [ -f coverage/index.html ]; then
-              cp coverage/index.html REPORTES/vitest_report.html || true
-            fi
-          fi
+          # Crear un reporte HTML simple a partir de la salida de pruebas
+          cat > REPORTES/vitest_report.html << 'EOF'
+          <!DOCTYPE html>
+          <html lang="es">
+          <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Reporte de Pruebas - Vitest</title>
+            <style>
+              body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; margin: 40px; background: #f5f5f5; }
+              .container { max-width: 1000px; margin: 0 auto; background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+              h1 { color: #333; border-bottom: 3px solid #6366f1; padding-bottom: 10px; }
+              h2 { color: #555; margin-top: 30px; }
+              pre { background: #f8f8f8; padding: 15px; border-left: 4px solid #6366f1; overflow-x: auto; }
+              .success { color: #10b981; font-weight: bold; }
+              .failure { color: #ef4444; font-weight: bold; }
+            </style>
+          </head>
+          <body>
+            <div class="container">
+              <h1>📊 Reporte de Pruebas - Vitest</h1>
+              <h2>Salida de Ejecución</h2>
+              <pre>
+          EOF
+          cat REPORTES/test_output.txt >> REPORTES/vitest_report.html
+          cat >> REPORTES/vitest_report.html << 'EOF'
+              </pre>
+              <hr>
+              <p><small>Generado automáticamente por GitHub Actions</small></p>
+            </div>
+          </body>
+          </html>
+          EOF
+          echo "✅ Reporte HTML generado"
 
       - name: Patch coverage HTML to include CSS
         if: always()
