--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ node_modules
 logs
 *.log
 
+# Test coverage
+coverage
+
 # Misc
 .DS_Store
 .fleet
@@ -24,5 +27,5 @@ logs
 .env.*
 !.env.example
 
-#dependencias
+# Dependencies
 package-lock.json
