--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:ui": "vitest --ui" 
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
@@ -27,7 +27,8 @@
     "pinia": "3.0.3",
     "typescript": "5.9.2",
     "vue": "3.5.20",
-    "vue-router": "4.5.1"
+    "vue-router": "4.5.1",
+    "zod": "4.1.12"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
